--- a/PRAPTI.html
+++ b/PRAPTI.html
@@ -8,7 +8,7 @@
                 <font size="4" <p> </b>Hey Praptiii !<hr style="width: 5%;"></b></p></font>
                 <br>
                 <br>
-                This is something through which am expressing my LOVEEE for youu<3
+                This is something through which am expressing my LOVEEE for youu<3❤️
                 <br>
                 I know it might seem that i dont respect you or your emotions or even your efforts,
                 <br>
