--- a/PRAPTI.html
+++ b/PRAPTI.html
@@ -8,23 +8,22 @@
                 <font size="4" <p> </b>Hey Praptiii !<hr style="width: 5%;"></b></p></font>
                 <br>
                 <br>
-                This is something through which am expressing my LOVEEE for youu<3❤️
+                This is something through which am expressing my LOVEEE for youu<3
                 <br>
                 I know it might seem that i dont respect you or your emotions or even your efforts,
                 <br>
-                 but to be honest i really do <br><img src="C:\Users\Vatsal\Downloads\SMILEY.png.png" style="width: 1.5%;">
-                 <br>
+                 but to be honest i really do <br>       😿          <br>
                  <br>
                  I wanna tell you that you have a special place in my heart, okay? 
                  <br>
                   Its not like if i don't express, I don't even feel.
                   <br>
-                  <img src="C:\Users\Vatsal\Downloads\CRY.png" style="width: 1.25%;">
+                  🥺🥺
                 <br>
                 <br>
-                You are obviously my <b>FAVOURITE PERSONNNN MERI GAAAANDUUUUUUUU
-                <img src="C:\Users\Vatsal\Downloads\HEART.png" style="width: 2%;"><hr style="width: 30%;"></b>
-                <br>
+                You are obviously my <b>FAVOURITE PERSONNNN MERI GAAAANDUUUUUUUU❤️
+                
+                    <br>
                 <br>
                 Also i know ke mere side se efforts thode kummm rehte hai <br> but i'll try to give more efforts and trust me
                 <br>
@@ -32,7 +31,7 @@
                  <br>
                   and also console you for the same
                   <br>
-                 <img src="C:\Users\Vatsal\Downloads\smile.png" style="width: 1%;">
+                🥰🥰
                 <br>
                 <br>
                 <font size="5">THANK YOU</font> for being in my life<3 
@@ -45,7 +44,7 @@
                 Bassss toh firrrrrr..<br>Agar smile kiyaa ho toh mere yeh web page ki mehnatttt safallllll huiii :))))
                 <hr>
                 <b>YOU STAY HAPPY, STAY CLOSE!</b>
-               <marquee><b> LOVEEEEE YOUUUUUU PRAPTIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII . </b><img src="C:\Users\Vatsal\Downloads\pinkheart.png" style="width: 1%;"></marquee>
+               <marquee><b> LOVEEEEE YOUUUUUU PRAPTIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII . </b>🦋❤️</marquee>
             </p>
             </table>
         </body>
